Footer fixed, new item added to the main list and new page container added to the app

--- a/week5/cordova/tripnotes0.0.1/www/index.html
+++ b/week5/cordova/tripnotes0.0.1/www/index.html
@@ -60,11 +60,17 @@
 				      <p>Located in the south of France, close to the border with Italy, Nice is part of the famous French Riviera...</p>
 				    </a>
 				  </li>
+				  <li>
+				  	<a href="#page4" data-transition="pop">
+				  		<h3>Marseille</h3>
+				  		<p>Region of Provence-Alpes-Côte d'Azur</p>
+				  	</a>
+				  </li>
 				</ul>
 
 		</div>
 		</div><!-- /content -->
-		<div data-role="footer">
+		<div data-role="footer" data-position="fixed">
 	    <h5>footer - page 1</h5>
 		</div><!-- /footer -->
 	</div><!-- /page1 -->
@@ -93,10 +99,23 @@
 			<img src="media/images/monaco1.jpg">
 		<section>
 		</div><!-- /content -->
-		<div data-role="footer">
+		<div data-role="footer" data-position="fixed">
 	    <h5>footer - page 3</h5>
 		</div><!-- /footer -->
 	</div><!-- /page3 -->
+
+	<!-- page4 -->
+	<div data-role="page" id="page4">
+		<div data-role="header">
+	    	<h3>page 4</h3>
+		</div><!-- /header -->
+		<div role="main" class="ui-content">
+			<p><a data-rel="back" class="ui-btn">Return</a></p>
+		</div>
+		<div data-role="footer" data-position="fixed">
+	    	<h5>footer - page 4</h5>
+		</div><!-- /footer -->
+	</div>
 
     </body>
 </html>
